<resources>
    <string name="app_name">GamifiedLearning</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Page2">These financial calculators will assist you in bringing your money under control and help it grow</string>
    <string name="Page3">This is Page 3</string>
    <string name="EmergencyFund">Emergency Fund</string>
    <string name="CreditCard">Credit Card Repayments</string>
    <string name="CompoundInterest">Compound Interest</string>
    <string name="Irregular">Irregular Payments</string>
    <string name="ccIcon">This is the icon for going to Credit Card repayment preface</string>
    <string name="emergencyIcon">This is the icon for going to Emergency Fund preface</string>
    <string name="compoundIcon">This is the icon for going to Compound Interest preface</string>
    <string name="IrregularIcon">This is the icon for going to Irregular Payments preface</string>
    <string name="facebook_app_id">403306607711246</string>
    <string name="fb_login_protocol_scheme">fb403306607711246</string>


    <string name="EmergencyFundPreface">Emergency Funds are a great way to ensure you do not run out of money if you temporarily lose a job, get sick or need some money for a replacement car.
        This does NOT replace a savings account, and you are not supposed to touch this until you are really in an emergency.<br /><br />To calculate this, you will need a rough idea of your weekly expenses</string>

    <string name="CreditCardPreface">Paying off credit card debt is a geat step to being more financially secure. Make note of your interest rate and principal amount.
    The more you pay off the principal, the less interest you get charged.<br /><br />To calculate this, you will need to find out a few things such as the interest rate in percentage terms,
        the monthly minimum repayment, any annual fees and how much you think you could pay off. </string>

    <string name="CompoundInterestPreface">Credit cards utilise compound interest to their advantage. You too can utilise compound interest.
        With this calculator, you will be able to see just how much your money can grow.<br /><br />To calculate this, you will need to know the amount you wish to invest,
        for how long you wish to onvest it, and if the interest if calculated daily, monthly or yearly.</string>

    <string name="IrregularPreface">Irregular payments are often categorised as payments that happen once per year. It is common to forget that car registration is due at a particular part of the year.
    This calcuator helps you budget by taking the overall amount and breaking it down so you can budget the entire amount over the year instead of trying to find a lump sum once a year.
        <br /><br />To calculate this, you will need to know the amount you expect to pay in a lump sum e.g. a car registration or drivers licence payment.</string>
    <string name="OkButton">OK</string>

    <string name="expensetype">Type of expense: </string>

    <string name="hint">The frequency is how many times a year do you pay the above amount.</string>

    <string name="result">This is the result: </string>

    <string name="resulthint">Put this amount away each month: </string>

    <string name="Calculate">Calculate !</string>
    <string name="Amount">Lump sum amount </string>
    <string name="Frequency">Payment frequency</string>
    <string name="investAmount">Enter the amount you wish to invest:  </string>
    <string name="InterestRate">Enter the annual interest rate. <br /> Example: 15 </string>

    <string name="compoundInterval">Enter the compounding intervals. Example: 12 For Monthly Compounding </string>
    <string name="mature">Enter how many years to mature </string>
    <string name="ExpectedReturn">Your expected return: </string>
    <string name="Expenses">Your WEEKLY expenses </string>
    <string name="Expense1">First expense: </string>
    <string name="Expense2">Second expense: </string>
    <string name="Expense3">Third expense: </string>
    <string name="ExpenseResult">Emergency fund size needed: </string>

    <string name="Balance">Outstanding Balance: </string>
    <string name="AnnualFee">Annual Fee: </string>
    <string name="MinRepay">Minimum Repayment: </string>
    <string name="HigherRepay">Higher repayment amount: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="IrregularPayAmount">Irregular Payement Amounts: </string>
    <string name="IrregularPayFreq">Irregular Payement Frequency: </string>

</resources>