<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/irclayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradientlist">

        <TextView
            android:id="@+id/tvIrregularTitle2"
            android:layout_width="175dp"
            android:layout_height="62dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/Irregular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etExpenseType"
            android:layout_width="199dp"
            android:layout_height="43dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/expensetype"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/expensetype"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIrregularTitle2" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="199dp"
            android:layout_height="43dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/Amount"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etExpenseType"
            tools:text="@string/Amount" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/Frequency"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAmount"
            tools:text="@string/Frequency" />

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

        <TextView
            android:id="@+id/tvIrregularResult"
            android:layout_width="132dp"
            android:layout_height="51dp"
            android:layout_marginTop="40dp"
            android:text="@string/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIrregularCalc" />

        <Button
            android:id="@+id/btnIrregularCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHint" />

        <TextView
            android:id="@+id/tvIrregularResultHint"
            android:layout_width="132dp"
            android:layout_height="51dp"
            android:layout_marginTop="40dp"
            android:text="@string/resulthint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIrregularCalc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_View"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>