<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvEmergencyTitle"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/EmergencyFund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/OkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmergencyCalcPreface3" />

    <TextView
        android:id="@+id/tvEmergencyCalcPreface3"
        android:layout_width="300dp"
        android:layout_height="255dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/EmergencyFundPreface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEmergencyPreface" />

    <ImageView
        android:id="@+id/ivEmergencyPreface"
        android:layout_width="182dp"
        android:layout_height="145dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/EmergencyFund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmergencyTitle"
        app:srcCompat="@drawable/insurance" />

</androidx.constraintlayout.widget.ConstraintLayout>