<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCompoundTitle"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/CompoundInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCompound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/OkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmergencyCalcPreface" />

    <TextView
        android:id="@+id/tvEmergencyCalcPreface"
        android:layout_width="300dp"
        android:layout_height="255dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/CompoundInterestPreface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCompoundPreface" />

    <ImageView
        android:id="@+id/ivCompoundPreface"
        android:layout_width="182dp"
        android:layout_height="145dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/CompoundInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompoundTitle"
        app:srcCompat="@drawable/compound" />
</androidx.constraintlayout.widget.ConstraintLayout>