<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ccrPLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1">

        <TextView
            android:id="@+id/tvCCRepayPreface"
            android:layout_width="300dp"
            android:layout_height="255dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/CreditCardPreface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCCRepay2" />

        <Button
            android:id="@+id/btnCCRepay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCCRepayPreface" />

        <ImageView
            android:id="@+id/ivCCRepay2"
            android:layout_width="182dp"
            android:layout_height="145dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/CreditCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepayTitle"
            app:srcCompat="@drawable/credit" />

        <TextView
            android:id="@+id/tvRepayTitle"
            android:layout_width="175dp"
            android:layout_height="62dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/CreditCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_View"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>